[WFCORE-4296] Add required --add-opens for java.base/com.sun.net.ssl.internal.ssl when HTTPS is configured